--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,23 @@
     --primary-white-color: #FFFFFF;
     --title-color: #212121;
     --text-color: #757575;
+    --bg-color: #2F303A;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
+}
+
+/* Обнулення стилів для посилань та списків */
+
+.link {
+    text-decoration: none;
+}
+
+.list {
+    list-style: none;
+    padding-inline-start: unset;
 }
 
 /* Лого стилі */
@@ -26,7 +38,7 @@ body {
     color: var(--accent-color);
 }
 
-.studio-header{
+.studio-header {
     color: #000000;
 }
 
@@ -49,10 +61,113 @@ body {
 
 .header-link:hover,
 .header-link:focus,
-.current {
+.current,
+.footer-address:hover,
+.footer-address:focus,
+.footer-email:hover,
+.footer-phone:hover,
+.footer-email:focus,
+.footer-phone:focus {
     color: var(--accent-color);
 }
 
+.footer {
+    background-color: var(--bg-color);
+}
+
+.footer-address {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,7;
+
+    color: var(--primary-white-color);
+}
+
+.footer-email,
+.footer-phone {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,7;
+
+    color: rgba(255, 255, 255, 0.6);
+}
+
+
 /* Студія стилі */
+
+.hero {
+    background-color: var(--bg-color);
+}
+
+.hero-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1, 4;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    color: var(--primary-white-color);
+}
+
+.hero-button {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1,9;
+    letter-spacing: 0.06em;
+
+    color: var(--primary-white-color);
+
+    width: 216px;
+    height: 50px;
+    border-radius: 4px;
+    cursor: pointer;
+    
+    background-color: var(--accent-color);
+}
+
+.features-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1,14;
+    text-transform: uppercase;
+
+    color: var(--title-color);
+}
+
+.features-text {
+    font-size: 14px;
+    line-height: 1,7;
+
+    color: var(--text-color);
+}
+
+.work-title,
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1,2;
+    text-align: center;
+
+    color: var(--title-color);
+}
+
+.team-name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1,2;
+
+    color: var(--title-color);
+}
+
+.team-position {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1,2;
+
+    color: var(--text-color);
+}
 
 /* Портфоліо стилі */
