--- a/css/styles.css
+++ b/css/styles.css
@@ -171,3 +171,39 @@ body {
 }
 
 /* Портфоліо стилі */
+
+.portfolio-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+
+    color: var(--title-color);
+}
+
+.portfolio-text {
+    font-size: 16px;
+    line-height: 1,9;
+    
+    color: var(--text-color);
+}
+
+.filter-buttons {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1,6;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--title-color);
+    background-color: #F5F4FA;
+    
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.filter-buttons:hover {
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+}
