--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
 body {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
+
+    color: var(--title-color);
 }
 
 /* Обнулення стилів для посилань та списків */
@@ -51,6 +53,18 @@ body {
 .header-link {
     font-weight: 500;
     font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
+    color: var(--title-color);
+
+    text-decoration: none;
+}
+
+.header-email,
+.header-phone {
+    font-weight: 500;
+    font-size: 14px;
     line-height: 1,14;
     letter-spacing: 0.02em;
 
@@ -59,15 +73,9 @@ body {
     text-decoration: none;
 }
 
-.header-link:hover,
-.header-link:focus,
 .current,
-.footer-address:hover,
-.footer-address:focus,
-.footer-email:hover,
-.footer-phone:hover,
-.footer-email:focus,
-.footer-phone:focus {
+.hover-focus:hover,
+.hover-focus:focus {
     color: var(--accent-color);
 }
 
@@ -133,8 +141,6 @@ body {
     font-size: 14px;
     line-height: 1,14;
     text-transform: uppercase;
-
-    color: var(--title-color);
 }
 
 .features-text {
@@ -150,16 +156,12 @@ body {
     font-size: 36px;
     line-height: 1,2;
     text-align: center;
-
-    color: var(--title-color);
 }
 
 .team-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1,2;
-
-    color: var(--title-color);
 }
 
 .team-position {
@@ -177,8 +179,6 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-
-    color: var(--title-color);
 }
 
 .portfolio-text {
@@ -203,7 +203,8 @@ body {
     cursor: pointer;
 }
 
-.filter-buttons:hover {
+.filter-buttons:hover,
+.filter-buttons:focus {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
 }
