--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,11 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.features,
+.work {
+    background-color: inherit;
+}
+
 .features-title {
     font-weight: 700;
     font-size: inherit;
